trunk/Archive2/f0/8b75abee92b5a0/output
main.cpp:9:10: error: declaration of 'long int Outer::x' [-fpermissive]
     long x;
          ^
main.cpp:2:6: error: changes meaning of 'x' from 'char x' [-fpermissive]
 char x;
      ^
