trunk/Archive2/f0/8b75abee92b5a0/main.cpp
#include <iostream>
char x;
struct Outer {
    class Inner {
    public:
        const static int i = sizeof(x);
    };
    const static int i = sizeof(x);
    long x;
};
int main()
{
    std::cout << Outer::Inner::i << '\n';
}
